# openbroadcast.org

./: .checkignore  .codeclimate.yml  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .fossa.yml  .gitignore  .pylintrc  .snyk  .stylelintignore  .stylelintrc  .stylelintrc.js  .tmuxp.yaml  Makefile  README  README.md  __orig__gulpfile.js  __orig__package.json  _package.json  circle.yml  cloc.sh  d110-requirements.txt  docker-compose.yml  fabfile.py  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements-1.10.txt  requirements-1.9.txt  requirements-old.txt  requirements.txt  requirements3.txt  settings.json  tox.ini  upgrade-requirements.txt  upgrade3-requirements.txt  webpack.config.js
.circleci/: config.yml
.github/workflows/: ci.yaml
.tmp/styles/: screen.css
conf/: echoprint.openbroadcast.ch.supervisord.conf  openbroadcast.ch.gunicorn.conf  openbroadcast.org.gunicorn.conf  openbroadcast.org.supervised.conf  services.openbroadcast.ch.supervised.conf  services.openbroadcast.org.supervised.conf
conf/nginx/: README.txt  local.openbroadcast.org.nginx.conf  prod.openbroadcast.ch.nginx.conf  prod.openbroadcast.org.nginx.conf  stage.openbroadcast.ch.nginx.conf  stage.openbroadcast.org.nginx.conf
conf/wowza/: INSTALL.txt
content/: privacy-policy-de.html  privacy-policy-en.html  privacy-policy.html  terms-and-conditions-de.html  terms-and-conditions-en.html  terms-and-conditions.html
dev/db/: README.md  dump_json.sh  dump_psql.sh
doc/: Makefile  __disabled__auto_modules.__rst__  conf.py  make.bat  moved to own repository.txt
docker/: docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf
docker/pushy/: Dockerfile  config.json
docker/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
notes/query_debug/: new.sql
scripts/: ttservctl
services/: INSTALL_PYPO.txt
services/bcmon/: bcmon_notify.py  config.cfg  dummy.liq  logging.cfg  ls_run.sh  notify.sh  orig_bcmon_notify.py  test.py
services/pushy/: config.json  example-config.json  package-lock.json  package.json  pushy-ssl.js  pushy.js
services/socketio/: dummy.py  gateway.js
static/js/: bundle.js  initializer.js  legacy.js  settings.js
static/sass/: _temporary.sass  admin.sass  aplayer.sass  print.sass  scheduler.sass  screen.sass
static/style/: main.scss
tools/identify/: identify.py
tools/sampler/: sampler.py
util/: applescript.openbroadcast.org.scpt  applescript.upgrade.openbroadcast.org.scpt  db_dump.sh  db_restore.sh  remote_to_local.sh  sample_remote_to_local.conf
util/db/: README.md  dump_json.sh  dump_mysql.sh  load_json.sh  load_mysql.sh  load_psql.sh
utils/: download_master.py
website/: .coverage  Fingerprint Workflow.ipynb  NB - label statistics.ipynb  NB - massimport duplicates.ipynb  NOTES  __init__.py  celerybeat-schedule.db  changelog.txt  debug-fprint.py  default.sqlite3  dp_fix.json  dump.rdb  fix_media.sh  imgtest.py  manage.py  package.json  settings.py  tag_fix.sql  test_settings.py  urls.py  urls_api.py
website/_notebooks/: DiscogsAPISearch.ipynb  ImportLookup.ipynb  NB - SearchIndex.ipynb  NB - duplicate queries elasticsearch dsl.ipynb  NB - label statistics.ipynb  NB - query for duplicates.ipynb  NB - statistics.ipynb
website/base/: __init__.py  apps.py  checks.py  mixins.py  models.py
website/dev/: loginas
website/fixtures/: cms_initial.json  initial.json
website/lib/: README.md  cms_plugin_processors.py  context_processors.py  middleware.py  prettify.py  show_debug_toolbar.py
website/platform_base/: __init__.py  apps.py  checks.py
website/project/: __init__.py  celery.py  local_settings.py  menu.py  sample_local_settings.py  (+6 more)
(+3831 files in other folders)
